# ai-task-manager

./: README.md  config.py  depends.py  main.py  pyproject.toml
database/: collection_models.py  database.py  task_models.py  user_models.py
repositories/: collection_repo.py  gemini_repo.py  task_manager_repo.py  task_repo.py  user_repo.py
routing/: __init__.py  authentication_router.py  chat_bot_router.py  collection_router.py  task_router.py  user_router.py
schemas/: auth_schemas.py  collection_schemas.py  task_schemas.py  user_schemas.py
services/: authentication_service.py  chat_bot_service.py  collection_service.py  task_service.py  user_service.py
